--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ go:
 before_script:
 - go get golang.org/x/tools/cmd/cover
 - go get github.com/mattn/goveralls
+- go get -t -v ./...
 
 script:
 - go test -v -covermode=count -coverprofile=coverage.out ./...
